--- a/src/app/modules/auth/pages/profile/profile.component.html
+++ b/src/app/modules/auth/pages/profile/profile.component.html
@@ -1,4 +1,5 @@
 
+<div *ngIf="isAuthenticated; else notAuthenticated">
     <main class="user-info">
         <article class="user-box">
             <figure class="user-box__profile">
@@ -23,7 +24,7 @@
 
                 <div class="user-box__portion">
                     <label class="user-box__label">Birth date:</label>
-                    <p type="text" class="user-box__text user-box__text--username">{{ birthDate }}</p>
+                    <p type="text" class="user-box__text user-box__text--username">{{ birthDate | date }}</p>
                 </div>
                 
             </section>
@@ -64,11 +65,17 @@
                 
     
             </form>
-        </section>
-        
-
-        
-        
+        </section>  
         <!-- <h1 class="character-title">Your saved characters:</h1>
         <article class="character-list"></article> -->
     </main>
+    <router-outlet></router-outlet>
+    </div>  
+    <ng-template #notAuthenticated>
+        <!-- Mostrar contenido para usuarios no autenticados -->
+        <!-- Por ejemplo, mostrar un mensaje para iniciar sesión -->
+        <div class="not-authenticated-message">
+        <p>Por favor, <a [routerLink]="['/signUp']">registrate</a> para poder acceder a esta página.</p>
+        </div>
+      </ng-template>
+      
