--- a/src/app/modules/auth/pages/profile/profile.component.scss
+++ b/src/app/modules/auth/pages/profile/profile.component.scss
@@ -210,3 +210,23 @@
 //     flex-direction: column;
 //     justify-content: center;
 // }
+.not-authenticated-message {
+    font-family: 'Ringbearer', sans-serif;
+    background: linear-gradient(to right, #a6a1a1, #c9c5c5, #bab6b6, #b0adad, #a6a1a1);
+    background-size: 200% auto;
+    animation: shimmer 10s infinite linear;
+
+    text-align: center; /* Para centrar el texto */
+    padding: 10px; /* Añadir espacio alrededor del texto */
+
+    height: 80vh;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  
+.not-authenticated-message a {
+    color: rgb(67, 7, 7); /* Color del texto del enlace */
+    text-decoration: none; /* Eliminar subrayado del enlace */
+  }
